# camera-extrinsics-calibrator

./: .gitignore  CMakeLists.txt  README.md  TODO.md  style_code.sh
data/: planck_ctrl_2019-02-22-21-53-35.mat  processPlanckData.m
include/: FeatProj.h  XformLocalParam.h  cal.h  sim.h
include/test/: test.h
lib/VI-EKF/: .gitignore  .gitmodules  CMakeLists.txt  package.xml
lib/VI-EKF/include/: klt_tracker.h  math_helper.h  vi_ekf.h  vi_ekf_ros.h
lib/VI-EKF/launch/: ocam.launch  ocam_pp.launch  test.launch
lib/VI-EKF/lib/geometry/: CMakeLists.txt
lib/VI-EKF/lib/geometry/include/: quat.h  support.h  xform.h
lib/VI-EKF/lib/geometry/src/: test.cpp
lib/VI-EKF/params/: firefly.yaml  gains.yaml  leo.yaml  ocam.yaml
lib/VI-EKF/scripts/: automatic_test.sh
lib/VI-EKF/src/: klt_tracker.cpp  math_helper.cpp  quat.cpp  rosbag_parser.cpp  vi_ekf_node.cpp  vi_ekf_ros.cpp
lib/VI-EKF/src/test/: jac_test.cpp  quat_test.cpp  xform_test.cpp
lib/VI-EKF/src/vi_ekf/: vi_ekf.cpp  vi_ekf_dyn.cpp  vi_ekf_error.cpp  vi_ekf_feat.cpp  vi_ekf_helper.cpp  vi_ekf_kfr.cpp  vi_ekf_log.cpp  vi_ekf_meas.cpp
lib/VI-EKF/vi_ekf/: ETH_coordinate_frames.py  ETH_geometry.py  add_landmark.py  data.py  eth_data_loader.py  fix_ETH_bag.py  generate_data.py  import_log.py  jacobians_test.py  klt_tracker.py  main.py  math_helper.py  plot_helper.py  plot_paper.py  plot_results.py  pyquat.py  relative_state_update_jacobian.py  rosbag_data_loader.py  shift_truth.py  test.py  vi_ekf.py  yaw_from_quaternion.py
lib/geometry/: CMakeLists.txt
lib/geometry/include/geometry/: cam.h  quat.h  support.h  xform.h
lib/geometry/src/: test.cpp
lib/multirotor_sim/include/multirotor_sim/: environment.h
lib/multirotor_sim/lib/geometry/include/geometry/: quat.h  support.h  xform.h
lib/multirotor_sim/lib/geometry/src/: test.cpp
lib/multirotor_sim/lib/nanoflann_eigen/: CMakeLists.txt
lib/multirotor_sim/lib/nanoflann_eigen/include/nanoflann_eigen/: nanoflann_eigen.h
lib/multirotor_sim/lib/nanoflann_eigen/src/: test.cpp
lib/multirotor_sim/src/: environment.cpp  simulator.cpp
matlab/: plotHardwareResiduals.m  plotSimEstimates.m  plotSimulationResiduals.m  visualizeSim.m
matlab/utils/: cam_plot.m  euler_to_quat.m  euler_to_quat_vecs.m  quad_plot.m  quat_to_euler.m  quat_to_euler_vecs.m  write_log.m
params/: cal_params_hw.yaml  cal_params_sim.yaml  ekf_baseline_params.yaml  mc_params.yaml  sim_params.yaml
src/: cal.cpp  sim.cpp
src/test/: test.cpp
