<package format="2">
  <name>vi_ekf</name>
  <version>1.1.1</version>
  <description>
  This is a tightly-coupled visual-inertial EKF which operates on the manifold
  </description>
  <maintainer email="superjax08@gmail.com">James James</maintainer>
  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>message_generation</depend>
  <depend>cmake_modules</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>rosbag</depend>

</package>
